fixbug cleanup