@@ -65,7 +65,7 @@ public class JSR154Filter implements Filter
         throws ServletException
     {
         _servletContext=filterConfig.getServletContext();
-        _unwrappedDispatchSupported=new Boolean(filterConfig.getInitParameter("unwrappedDispatch")).booleanValue();
+        _unwrappedDispatchSupported=Boolean.valueOf(filterConfig.getInitParameter("unwrappedDispatch")).booleanValue();
         _servletContext.log("JSR154 unwrappedDispatchSupported="+_unwrappedDispatchSupported);
     }
 
